# bookshelf-leptos

./: Cargo.toml  Trunk.toml  index.html
docs/: bookshelf-leptos-ec7a172a9c9cbefd.js  bookshelf-leptos-ec7a172a9c9cbefd_bg.wasm  index.html
src/: bookshelf.rs  main.rs
