[package]
name = "bookshelf-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
gloo-storage = "0.2.2"
leptos = { version = "0.4.2", features = ["nightly", "csr"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.169", features = ["derive"] }
thiserror = "1.0.43"
